--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "md5": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "universal-jsonp": "^0.6.5"
   },
